--- a/src/assets/styles/flashflex/pages/_apply-artist.scss
+++ b/src/assets/styles/flashflex/pages/_apply-artist.scss
@@ -49,7 +49,7 @@
 		h3 {
 			padding-bottom: p(10);
 			border-bottom: 1px solid $color-border;
-			margin-bottom: p(15);
+			margin-bottom: p(45);
 		}
 
 		// .group-step {
@@ -135,7 +135,7 @@
 		.how-it-works {
 			padding: 0 p(60);
 			margin-top: 5.125rem;
-			margin-bottom: 5.625rem;
+			margin-bottom: p(95);
 
 			h3 {
 				border-bottom: none;
@@ -171,8 +171,8 @@
 		.artist-benefits {
 			
 			h3 {
-				padding: 0 0 0 p(60);
-				margin-bottom: p(60);
+				padding: 0 0 0 p(70);
+				margin-bottom: p(50);
 			}
 
 			.btn-apply {
